// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`debts.update > functionality > update amount > counterparty accepts manually > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:dab8bf0d-e0d7-493c-8680-13c64847a876|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "amount": "704.5100",
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update amount > counterparty accepts manually > unlocked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:0cc3460c-e06f-41e1-9274-3c44d81defa6|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "amount": "395.6600",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update amount > counterparty auto-accepts > debt didn't exist beforehand 1`] = `
{
  "added": {
    "debts": {
      "id:ac5dc383-b972-4f25-92d5-cfd8bb6ea75a|ownerAccountId:b5f98bfa-72f8-4789-ab64-3c4038d9536b": {
        "amount": "-823.6900",
        "created": "2020-01-01T00:00:00.000Z",
        "currencyCode": "XPF",
        "id": "ac5dc383-b972-4f25-92d5-cfd8bb6ea75a",
        "lockedTimestamp": null,
        "note": "Qui distinctio consequatur id delectus harum consequatur voluptatem id.",
        "ownerAccountId": "b5f98bfa-72f8-4789-ab64-3c4038d9536b",
        "receiptId": null,
        "timestamp": "2020-01-01T00:00:00.000Z",
        "userId": "1d208f1a-a330-418a-943e-539bca90dae0",
      },
    },
  },
  "updated": {
    "debts": {
      "id:ac5dc383-b972-4f25-92d5-cfd8bb6ea75a|ownerAccountId:a70c3c7d-6c9a-4189-b65e-84061c3d1a7a": {
        "amount": "823.6900",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update amount > counterparty auto-accepts > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:dab8bf0d-e0d7-493c-8680-13c64847a876|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "amount": "704.5100",
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
      },
      "id:dab8bf0d-e0d7-493c-8680-13c64847a876|ownerAccountId:b4fba71b-3720-46f4-befe-54e779c889fc": {
        "amount": "-704.5100",
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update amount > counterparty auto-accepts > unlocked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:0cc3460c-e06f-41e1-9274-3c44d81defa6|ownerAccountId:32bcb6f1-76a9-4892-a8c2-9e755afa6fe7": {
        "amount": "-395.6600",
      },
      "id:0cc3460c-e06f-41e1-9274-3c44d81defa6|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "amount": "395.6600",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update currency code > counterparty accepts manually > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:dab8bf0d-e0d7-493c-8680-13c64847a876|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "currencyCode": "AUD",
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update currency code > counterparty accepts manually > unlocked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:0cc3460c-e06f-41e1-9274-3c44d81defa6|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "currencyCode": "AZN",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update currency code > counterparty auto-accepts > debt didn't exist beforehand 1`] = `
{
  "added": {
    "debts": {
      "id:ac5dc383-b972-4f25-92d5-cfd8bb6ea75a|ownerAccountId:b5f98bfa-72f8-4789-ab64-3c4038d9536b": {
        "amount": "-523.1100",
        "created": "2020-01-01T00:00:00.000Z",
        "currencyCode": "HKD",
        "id": "ac5dc383-b972-4f25-92d5-cfd8bb6ea75a",
        "lockedTimestamp": null,
        "note": "Qui distinctio consequatur id delectus harum consequatur voluptatem id.",
        "ownerAccountId": "b5f98bfa-72f8-4789-ab64-3c4038d9536b",
        "receiptId": null,
        "timestamp": "2020-01-01T00:00:00.000Z",
        "userId": "1d208f1a-a330-418a-943e-539bca90dae0",
      },
    },
  },
  "updated": {
    "debts": {
      "id:ac5dc383-b972-4f25-92d5-cfd8bb6ea75a|ownerAccountId:a70c3c7d-6c9a-4189-b65e-84061c3d1a7a": {
        "currencyCode": "HKD",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update currency code > counterparty auto-accepts > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:dab8bf0d-e0d7-493c-8680-13c64847a876|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "currencyCode": "AUD",
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
      },
      "id:dab8bf0d-e0d7-493c-8680-13c64847a876|ownerAccountId:b4fba71b-3720-46f4-befe-54e779c889fc": {
        "currencyCode": "AUD",
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update currency code > counterparty auto-accepts > unlocked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:0cc3460c-e06f-41e1-9274-3c44d81defa6|ownerAccountId:32bcb6f1-76a9-4892-a8c2-9e755afa6fe7": {
        "currencyCode": "AZN",
      },
      "id:0cc3460c-e06f-41e1-9274-3c44d81defa6|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "currencyCode": "AZN",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update locked - false > counterparty accepts manually > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:dab8bf0d-e0d7-493c-8680-13c64847a876|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "lockedTimestamp": null,
      },
    },
  },
}
`;

exports[`debts.update > functionality > update locked - false > counterparty accepts manually > unlocked before update 1`] = `{}`;

exports[`debts.update > functionality > update locked - false > counterparty auto-accepts > debt didn't exist beforehand 1`] = `
{
  "added": {
    "debts": {
      "id:ac5dc383-b972-4f25-92d5-cfd8bb6ea75a|ownerAccountId:b5f98bfa-72f8-4789-ab64-3c4038d9536b": {
        "amount": "-523.1100",
        "created": "2020-01-01T00:00:00.000Z",
        "currencyCode": "XPF",
        "id": "ac5dc383-b972-4f25-92d5-cfd8bb6ea75a",
        "lockedTimestamp": null,
        "note": "Qui distinctio consequatur id delectus harum consequatur voluptatem id.",
        "ownerAccountId": "b5f98bfa-72f8-4789-ab64-3c4038d9536b",
        "receiptId": null,
        "timestamp": "2020-01-01T00:00:00.000Z",
        "userId": "1d208f1a-a330-418a-943e-539bca90dae0",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update locked - false > counterparty auto-accepts > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:dab8bf0d-e0d7-493c-8680-13c64847a876|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "lockedTimestamp": null,
      },
      "id:dab8bf0d-e0d7-493c-8680-13c64847a876|ownerAccountId:b4fba71b-3720-46f4-befe-54e779c889fc": {
        "lockedTimestamp": null,
      },
    },
  },
}
`;

exports[`debts.update > functionality > update locked - false > counterparty auto-accepts > unlocked before update 1`] = `{}`;

exports[`debts.update > functionality > update locked - true > counterparty accepts manually > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:dab8bf0d-e0d7-493c-8680-13c64847a876|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update locked - true > counterparty accepts manually > unlocked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:0cc3460c-e06f-41e1-9274-3c44d81defa6|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update locked - true > counterparty auto-accepts > debt didn't exist beforehand 1`] = `
{
  "added": {
    "debts": {
      "id:ac5dc383-b972-4f25-92d5-cfd8bb6ea75a|ownerAccountId:b5f98bfa-72f8-4789-ab64-3c4038d9536b": {
        "amount": "-523.1100",
        "created": "2020-01-01T00:00:00.000Z",
        "currencyCode": "XPF",
        "id": "ac5dc383-b972-4f25-92d5-cfd8bb6ea75a",
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
        "note": "Qui distinctio consequatur id delectus harum consequatur voluptatem id.",
        "ownerAccountId": "b5f98bfa-72f8-4789-ab64-3c4038d9536b",
        "receiptId": null,
        "timestamp": "2020-01-01T00:00:00.000Z",
        "userId": "1d208f1a-a330-418a-943e-539bca90dae0",
      },
    },
  },
  "updated": {
    "debts": {
      "id:ac5dc383-b972-4f25-92d5-cfd8bb6ea75a|ownerAccountId:a70c3c7d-6c9a-4189-b65e-84061c3d1a7a": {
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update locked - true > counterparty auto-accepts > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:dab8bf0d-e0d7-493c-8680-13c64847a876|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
      },
      "id:dab8bf0d-e0d7-493c-8680-13c64847a876|ownerAccountId:b4fba71b-3720-46f4-befe-54e779c889fc": {
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update locked - true > counterparty auto-accepts > unlocked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:0cc3460c-e06f-41e1-9274-3c44d81defa6|ownerAccountId:32bcb6f1-76a9-4892-a8c2-9e755afa6fe7": {
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
      },
      "id:0cc3460c-e06f-41e1-9274-3c44d81defa6|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update multiple debts > with distinctly locking values > counterparty accepts manually > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:b9f660e6-c1bc-45dd-a44f-3d97cdd5e2f5|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "note": "tempora asperiores impedit",
      },
      "id:dab8bf0d-e0d7-493c-8680-13c64847a876|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "amount": "-828.9800",
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update multiple debts > with distinctly locking values > counterparty accepts manually > unlocked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:0cc3460c-e06f-41e1-9274-3c44d81defa6|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "amount": "390.9500",
      },
      "id:697ea37b-9f1b-40f4-9661-9f0e19b2a033|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "note": "amet nesciunt assumenda",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update multiple debts > with distinctly locking values > counterparty auto-accepts > debt didn't exist beforehand 1`] = `
{
  "added": {
    "debts": {
      "id:5697f64e-794a-4534-874c-283e2334b4c9|ownerAccountId:b5f98bfa-72f8-4789-ab64-3c4038d9536b": {
        "amount": "630.8100",
        "created": "2020-01-01T00:00:00.000Z",
        "currencyCode": "ILS",
        "id": "5697f64e-794a-4534-874c-283e2334b4c9",
        "lockedTimestamp": null,
        "note": "ea iure sunt",
        "ownerAccountId": "b5f98bfa-72f8-4789-ab64-3c4038d9536b",
        "receiptId": null,
        "timestamp": "2020-01-01T00:00:00.000Z",
        "userId": "1d208f1a-a330-418a-943e-539bca90dae0",
      },
      "id:ac5dc383-b972-4f25-92d5-cfd8bb6ea75a|ownerAccountId:b5f98bfa-72f8-4789-ab64-3c4038d9536b": {
        "amount": "963.6000",
        "created": "2020-01-01T00:00:00.000Z",
        "currencyCode": "XPF",
        "id": "ac5dc383-b972-4f25-92d5-cfd8bb6ea75a",
        "lockedTimestamp": null,
        "note": "Qui distinctio consequatur id delectus harum consequatur voluptatem id.",
        "ownerAccountId": "b5f98bfa-72f8-4789-ab64-3c4038d9536b",
        "receiptId": null,
        "timestamp": "2020-01-01T00:00:00.000Z",
        "userId": "1d208f1a-a330-418a-943e-539bca90dae0",
      },
    },
  },
  "updated": {
    "debts": {
      "id:5697f64e-794a-4534-874c-283e2334b4c9|ownerAccountId:a70c3c7d-6c9a-4189-b65e-84061c3d1a7a": {
        "note": "ea iure sunt",
      },
      "id:ac5dc383-b972-4f25-92d5-cfd8bb6ea75a|ownerAccountId:a70c3c7d-6c9a-4189-b65e-84061c3d1a7a": {
        "amount": "-963.6000",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update multiple debts > with distinctly locking values > counterparty auto-accepts > locked before update 1`] = `
{
  "added": {
    "debts": {
      "id:b9f660e6-c1bc-45dd-a44f-3d97cdd5e2f5|ownerAccountId:b4fba71b-3720-46f4-befe-54e779c889fc": {
        "amount": "739.1300",
        "created": "2020-01-01T00:00:00.000Z",
        "currencyCode": "AUD",
        "id": "b9f660e6-c1bc-45dd-a44f-3d97cdd5e2f5",
        "lockedTimestamp": null,
        "note": "tempora asperiores impedit",
        "ownerAccountId": "b4fba71b-3720-46f4-befe-54e779c889fc",
        "receiptId": null,
        "timestamp": "2020-01-01T00:00:00.000Z",
        "userId": "2d1fed05-9774-484e-bf14-e6249527e4e3",
      },
    },
  },
  "updated": {
    "debts": {
      "id:b9f660e6-c1bc-45dd-a44f-3d97cdd5e2f5|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "note": "tempora asperiores impedit",
      },
      "id:dab8bf0d-e0d7-493c-8680-13c64847a876|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "amount": "-828.9800",
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
      },
      "id:dab8bf0d-e0d7-493c-8680-13c64847a876|ownerAccountId:b4fba71b-3720-46f4-befe-54e779c889fc": {
        "amount": "828.9800",
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update multiple debts > with distinctly locking values > counterparty auto-accepts > unlocked before update 1`] = `
{
  "added": {
    "debts": {
      "id:697ea37b-9f1b-40f4-9661-9f0e19b2a033|ownerAccountId:32bcb6f1-76a9-4892-a8c2-9e755afa6fe7": {
        "amount": "-473.8300",
        "created": "2020-01-01T00:00:00.000Z",
        "currencyCode": "AWG",
        "id": "697ea37b-9f1b-40f4-9661-9f0e19b2a033",
        "lockedTimestamp": null,
        "note": "amet nesciunt assumenda",
        "ownerAccountId": "32bcb6f1-76a9-4892-a8c2-9e755afa6fe7",
        "receiptId": null,
        "timestamp": "2020-01-01T00:00:00.000Z",
        "userId": "86a63627-74ee-4db4-8a79-0cf83f6da8c5",
      },
    },
  },
  "updated": {
    "debts": {
      "id:0cc3460c-e06f-41e1-9274-3c44d81defa6|ownerAccountId:32bcb6f1-76a9-4892-a8c2-9e755afa6fe7": {
        "amount": "-390.9500",
      },
      "id:0cc3460c-e06f-41e1-9274-3c44d81defa6|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "amount": "390.9500",
      },
      "id:697ea37b-9f1b-40f4-9661-9f0e19b2a033|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "note": "amet nesciunt assumenda",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update multiple debts > with locking values > counterparty accepts manually > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:b9f660e6-c1bc-45dd-a44f-3d97cdd5e2f5|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "amount": "989.7800",
      },
      "id:dab8bf0d-e0d7-493c-8680-13c64847a876|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "amount": "-828.9800",
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update multiple debts > with locking values > counterparty accepts manually > unlocked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:0cc3460c-e06f-41e1-9274-3c44d81defa6|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "amount": "390.9500",
      },
      "id:697ea37b-9f1b-40f4-9661-9f0e19b2a033|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "amount": "200.3900",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update multiple debts > with locking values > counterparty auto-accepts > debt didn't exist beforehand 1`] = `
{
  "added": {
    "debts": {
      "id:5697f64e-794a-4534-874c-283e2334b4c9|ownerAccountId:b5f98bfa-72f8-4789-ab64-3c4038d9536b": {
        "amount": "-438.5800",
        "created": "2020-01-01T00:00:00.000Z",
        "currencyCode": "ILS",
        "id": "5697f64e-794a-4534-874c-283e2334b4c9",
        "lockedTimestamp": null,
        "note": "Natus quae ipsa quo autem.",
        "ownerAccountId": "b5f98bfa-72f8-4789-ab64-3c4038d9536b",
        "receiptId": null,
        "timestamp": "2020-01-01T00:00:00.000Z",
        "userId": "1d208f1a-a330-418a-943e-539bca90dae0",
      },
      "id:ac5dc383-b972-4f25-92d5-cfd8bb6ea75a|ownerAccountId:b5f98bfa-72f8-4789-ab64-3c4038d9536b": {
        "amount": "963.6000",
        "created": "2020-01-01T00:00:00.000Z",
        "currencyCode": "XPF",
        "id": "ac5dc383-b972-4f25-92d5-cfd8bb6ea75a",
        "lockedTimestamp": null,
        "note": "Qui distinctio consequatur id delectus harum consequatur voluptatem id.",
        "ownerAccountId": "b5f98bfa-72f8-4789-ab64-3c4038d9536b",
        "receiptId": null,
        "timestamp": "2020-01-01T00:00:00.000Z",
        "userId": "1d208f1a-a330-418a-943e-539bca90dae0",
      },
    },
  },
  "updated": {
    "debts": {
      "id:5697f64e-794a-4534-874c-283e2334b4c9|ownerAccountId:a70c3c7d-6c9a-4189-b65e-84061c3d1a7a": {
        "amount": "438.5800",
      },
      "id:ac5dc383-b972-4f25-92d5-cfd8bb6ea75a|ownerAccountId:a70c3c7d-6c9a-4189-b65e-84061c3d1a7a": {
        "amount": "-963.6000",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update multiple debts > with locking values > counterparty auto-accepts > locked before update 1`] = `
{
  "added": {
    "debts": {
      "id:b9f660e6-c1bc-45dd-a44f-3d97cdd5e2f5|ownerAccountId:b4fba71b-3720-46f4-befe-54e779c889fc": {
        "amount": "-989.7800",
        "created": "2020-01-01T00:00:00.000Z",
        "currencyCode": "AUD",
        "id": "b9f660e6-c1bc-45dd-a44f-3d97cdd5e2f5",
        "lockedTimestamp": null,
        "note": "Esse necessitatibus voluptatem nemo distinctio facere amet odit.",
        "ownerAccountId": "b4fba71b-3720-46f4-befe-54e779c889fc",
        "receiptId": null,
        "timestamp": "2020-01-01T00:00:00.000Z",
        "userId": "2d1fed05-9774-484e-bf14-e6249527e4e3",
      },
    },
  },
  "updated": {
    "debts": {
      "id:b9f660e6-c1bc-45dd-a44f-3d97cdd5e2f5|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "amount": "989.7800",
      },
      "id:dab8bf0d-e0d7-493c-8680-13c64847a876|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "amount": "-828.9800",
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
      },
      "id:dab8bf0d-e0d7-493c-8680-13c64847a876|ownerAccountId:b4fba71b-3720-46f4-befe-54e779c889fc": {
        "amount": "828.9800",
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update multiple debts > with locking values > counterparty auto-accepts > unlocked before update 1`] = `
{
  "added": {
    "debts": {
      "id:697ea37b-9f1b-40f4-9661-9f0e19b2a033|ownerAccountId:32bcb6f1-76a9-4892-a8c2-9e755afa6fe7": {
        "amount": "-200.3900",
        "created": "2020-01-01T00:00:00.000Z",
        "currencyCode": "AWG",
        "id": "697ea37b-9f1b-40f4-9661-9f0e19b2a033",
        "lockedTimestamp": null,
        "note": "Labore dolorum provident deleniti atque architecto error dignissimos aliquam.",
        "ownerAccountId": "32bcb6f1-76a9-4892-a8c2-9e755afa6fe7",
        "receiptId": null,
        "timestamp": "2020-01-01T00:00:00.000Z",
        "userId": "86a63627-74ee-4db4-8a79-0cf83f6da8c5",
      },
    },
  },
  "updated": {
    "debts": {
      "id:0cc3460c-e06f-41e1-9274-3c44d81defa6|ownerAccountId:32bcb6f1-76a9-4892-a8c2-9e755afa6fe7": {
        "amount": "-390.9500",
      },
      "id:0cc3460c-e06f-41e1-9274-3c44d81defa6|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "amount": "390.9500",
      },
      "id:697ea37b-9f1b-40f4-9661-9f0e19b2a033|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "amount": "200.3900",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update multiple debts > with non-locking values > counterparty accepts manually > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:b9f660e6-c1bc-45dd-a44f-3d97cdd5e2f5|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "note": "asperiores impedit doloremque",
      },
      "id:dab8bf0d-e0d7-493c-8680-13c64847a876|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "note": "temporibus assumenda tempora",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update multiple debts > with non-locking values > counterparty accepts manually > unlocked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:0cc3460c-e06f-41e1-9274-3c44d81defa6|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "note": "quam nisi amet",
      },
      "id:697ea37b-9f1b-40f4-9661-9f0e19b2a033|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "note": "nesciunt assumenda perspiciatis",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update multiple debts > with non-locking values > counterparty auto-accepts > debt didn't exist beforehand 1`] = `
{
  "added": {
    "debts": {
      "id:5697f64e-794a-4534-874c-283e2334b4c9|ownerAccountId:b5f98bfa-72f8-4789-ab64-3c4038d9536b": {
        "amount": "630.8100",
        "created": "2020-01-01T00:00:00.000Z",
        "currencyCode": "ILS",
        "id": "5697f64e-794a-4534-874c-283e2334b4c9",
        "lockedTimestamp": null,
        "note": "iure sunt saepe",
        "ownerAccountId": "b5f98bfa-72f8-4789-ab64-3c4038d9536b",
        "receiptId": null,
        "timestamp": "2020-01-01T00:00:00.000Z",
        "userId": "1d208f1a-a330-418a-943e-539bca90dae0",
      },
      "id:ac5dc383-b972-4f25-92d5-cfd8bb6ea75a|ownerAccountId:b5f98bfa-72f8-4789-ab64-3c4038d9536b": {
        "amount": "-523.1100",
        "created": "2020-01-01T00:00:00.000Z",
        "currencyCode": "XPF",
        "id": "ac5dc383-b972-4f25-92d5-cfd8bb6ea75a",
        "lockedTimestamp": null,
        "note": "soluta delectus ea",
        "ownerAccountId": "b5f98bfa-72f8-4789-ab64-3c4038d9536b",
        "receiptId": null,
        "timestamp": "2020-01-01T00:00:00.000Z",
        "userId": "1d208f1a-a330-418a-943e-539bca90dae0",
      },
    },
  },
  "updated": {
    "debts": {
      "id:5697f64e-794a-4534-874c-283e2334b4c9|ownerAccountId:a70c3c7d-6c9a-4189-b65e-84061c3d1a7a": {
        "note": "iure sunt saepe",
      },
      "id:ac5dc383-b972-4f25-92d5-cfd8bb6ea75a|ownerAccountId:a70c3c7d-6c9a-4189-b65e-84061c3d1a7a": {
        "note": "soluta delectus ea",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update multiple debts > with non-locking values > counterparty auto-accepts > locked before update 1`] = `
{
  "added": {
    "debts": {
      "id:b9f660e6-c1bc-45dd-a44f-3d97cdd5e2f5|ownerAccountId:b4fba71b-3720-46f4-befe-54e779c889fc": {
        "amount": "739.1300",
        "created": "2020-01-01T00:00:00.000Z",
        "currencyCode": "AUD",
        "id": "b9f660e6-c1bc-45dd-a44f-3d97cdd5e2f5",
        "lockedTimestamp": null,
        "note": "asperiores impedit doloremque",
        "ownerAccountId": "b4fba71b-3720-46f4-befe-54e779c889fc",
        "receiptId": null,
        "timestamp": "2020-01-01T00:00:00.000Z",
        "userId": "2d1fed05-9774-484e-bf14-e6249527e4e3",
      },
    },
  },
  "updated": {
    "debts": {
      "id:b9f660e6-c1bc-45dd-a44f-3d97cdd5e2f5|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "note": "asperiores impedit doloremque",
      },
      "id:dab8bf0d-e0d7-493c-8680-13c64847a876|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "note": "temporibus assumenda tempora",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update multiple debts > with non-locking values > counterparty auto-accepts > unlocked before update 1`] = `
{
  "added": {
    "debts": {
      "id:697ea37b-9f1b-40f4-9661-9f0e19b2a033|ownerAccountId:32bcb6f1-76a9-4892-a8c2-9e755afa6fe7": {
        "amount": "-473.8300",
        "created": "2020-01-01T00:00:00.000Z",
        "currencyCode": "AWG",
        "id": "697ea37b-9f1b-40f4-9661-9f0e19b2a033",
        "lockedTimestamp": null,
        "note": "nesciunt assumenda perspiciatis",
        "ownerAccountId": "32bcb6f1-76a9-4892-a8c2-9e755afa6fe7",
        "receiptId": null,
        "timestamp": "2020-01-01T00:00:00.000Z",
        "userId": "86a63627-74ee-4db4-8a79-0cf83f6da8c5",
      },
    },
  },
  "updated": {
    "debts": {
      "id:0cc3460c-e06f-41e1-9274-3c44d81defa6|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "note": "quam nisi amet",
      },
      "id:697ea37b-9f1b-40f4-9661-9f0e19b2a033|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "note": "nesciunt assumenda perspiciatis",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update multiple properties > locked as false > counterparty accepts manually > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:dab8bf0d-e0d7-493c-8680-13c64847a876|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "amount": "-459.5300",
        "currencyCode": "PLN",
        "lockedTimestamp": null,
        "note": "necessitatibus voluptatem nemo",
        "receiptId": "b9f660e6-c1bc-45dd-a44f-3d97cdd5e2f5",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update multiple properties > locked as false > counterparty accepts manually > unlocked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:0cc3460c-e06f-41e1-9274-3c44d81defa6|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "amount": "-288.7400",
        "currencyCode": "MGA",
        "note": "dolorum provident deleniti",
        "receiptId": "697ea37b-9f1b-40f4-9661-9f0e19b2a033",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update multiple properties > locked as false > counterparty auto-accepts > debt didn't exist beforehand 1`] = `
{
  "added": {
    "debts": {
      "id:ac5dc383-b972-4f25-92d5-cfd8bb6ea75a|ownerAccountId:b5f98bfa-72f8-4789-ab64-3c4038d9536b": {
        "amount": "-620.0900",
        "created": "2020-01-01T00:00:00.000Z",
        "currencyCode": "IRR",
        "id": "ac5dc383-b972-4f25-92d5-cfd8bb6ea75a",
        "lockedTimestamp": null,
        "note": "quae ipsa quo",
        "ownerAccountId": "b5f98bfa-72f8-4789-ab64-3c4038d9536b",
        "receiptId": "5697f64e-794a-4534-874c-283e2334b4c9",
        "timestamp": "2020-06-01T00:00:00.000Z",
        "userId": "1d208f1a-a330-418a-943e-539bca90dae0",
      },
    },
  },
  "updated": {
    "debts": {
      "id:ac5dc383-b972-4f25-92d5-cfd8bb6ea75a|ownerAccountId:a70c3c7d-6c9a-4189-b65e-84061c3d1a7a": {
        "amount": "620.0900",
        "currencyCode": "IRR",
        "note": "quae ipsa quo",
        "receiptId": "5697f64e-794a-4534-874c-283e2334b4c9",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update multiple properties > locked as false > counterparty auto-accepts > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:dab8bf0d-e0d7-493c-8680-13c64847a876|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "amount": "-459.5300",
        "currencyCode": "PLN",
        "lockedTimestamp": null,
        "note": "necessitatibus voluptatem nemo",
        "receiptId": "b9f660e6-c1bc-45dd-a44f-3d97cdd5e2f5",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
      "id:dab8bf0d-e0d7-493c-8680-13c64847a876|ownerAccountId:b4fba71b-3720-46f4-befe-54e779c889fc": {
        "amount": "459.5300",
        "currencyCode": "PLN",
        "lockedTimestamp": null,
        "receiptId": "b9f660e6-c1bc-45dd-a44f-3d97cdd5e2f5",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update multiple properties > locked as false > counterparty auto-accepts > unlocked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:0cc3460c-e06f-41e1-9274-3c44d81defa6|ownerAccountId:32bcb6f1-76a9-4892-a8c2-9e755afa6fe7": {
        "amount": "288.7400",
        "currencyCode": "MGA",
        "receiptId": "697ea37b-9f1b-40f4-9661-9f0e19b2a033",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
      "id:0cc3460c-e06f-41e1-9274-3c44d81defa6|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "amount": "-288.7400",
        "currencyCode": "MGA",
        "note": "dolorum provident deleniti",
        "receiptId": "697ea37b-9f1b-40f4-9661-9f0e19b2a033",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update multiple properties > locked as true > counterparty accepts manually > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:dab8bf0d-e0d7-493c-8680-13c64847a876|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "amount": "-459.5300",
        "currencyCode": "PLN",
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
        "note": "necessitatibus voluptatem nemo",
        "receiptId": "b9f660e6-c1bc-45dd-a44f-3d97cdd5e2f5",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update multiple properties > locked as true > counterparty accepts manually > locked before update 2`] = `
{
  "updated": {
    "debts": {
      "id:dab8bf0d-e0d7-493c-8680-13c64847a876|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "amount": "-459.5300",
        "currencyCode": "PLN",
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
        "note": "necessitatibus voluptatem nemo",
        "receiptId": "b9f660e6-c1bc-45dd-a44f-3d97cdd5e2f5",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update multiple properties > locked as true > counterparty accepts manually > unlocked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:0cc3460c-e06f-41e1-9274-3c44d81defa6|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "amount": "-288.7400",
        "currencyCode": "MGA",
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
        "note": "dolorum provident deleniti",
        "receiptId": "697ea37b-9f1b-40f4-9661-9f0e19b2a033",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update multiple properties > locked as true > counterparty auto-accepts > debt didn't exist beforehand 1`] = `
{
  "added": {
    "debts": {
      "id:ac5dc383-b972-4f25-92d5-cfd8bb6ea75a|ownerAccountId:b5f98bfa-72f8-4789-ab64-3c4038d9536b": {
        "amount": "-620.0900",
        "created": "2020-01-01T00:00:00.000Z",
        "currencyCode": "IRR",
        "id": "ac5dc383-b972-4f25-92d5-cfd8bb6ea75a",
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
        "note": "quae ipsa quo",
        "ownerAccountId": "b5f98bfa-72f8-4789-ab64-3c4038d9536b",
        "receiptId": "5697f64e-794a-4534-874c-283e2334b4c9",
        "timestamp": "2020-06-01T00:00:00.000Z",
        "userId": "1d208f1a-a330-418a-943e-539bca90dae0",
      },
    },
  },
  "updated": {
    "debts": {
      "id:ac5dc383-b972-4f25-92d5-cfd8bb6ea75a|ownerAccountId:a70c3c7d-6c9a-4189-b65e-84061c3d1a7a": {
        "amount": "620.0900",
        "currencyCode": "IRR",
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
        "note": "quae ipsa quo",
        "receiptId": "5697f64e-794a-4534-874c-283e2334b4c9",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update multiple properties > locked as true > counterparty auto-accepts > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:dab8bf0d-e0d7-493c-8680-13c64847a876|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "amount": "-459.5300",
        "currencyCode": "PLN",
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
        "note": "necessitatibus voluptatem nemo",
        "receiptId": "b9f660e6-c1bc-45dd-a44f-3d97cdd5e2f5",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
      "id:dab8bf0d-e0d7-493c-8680-13c64847a876|ownerAccountId:b4fba71b-3720-46f4-befe-54e779c889fc": {
        "amount": "459.5300",
        "currencyCode": "PLN",
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
        "receiptId": "b9f660e6-c1bc-45dd-a44f-3d97cdd5e2f5",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update multiple properties > locked as true > counterparty auto-accepts > unlocked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:0cc3460c-e06f-41e1-9274-3c44d81defa6|ownerAccountId:32bcb6f1-76a9-4892-a8c2-9e755afa6fe7": {
        "amount": "288.7400",
        "currencyCode": "MGA",
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
        "receiptId": "697ea37b-9f1b-40f4-9661-9f0e19b2a033",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
      "id:0cc3460c-e06f-41e1-9274-3c44d81defa6|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "amount": "-288.7400",
        "currencyCode": "MGA",
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
        "note": "dolorum provident deleniti",
        "receiptId": "697ea37b-9f1b-40f4-9661-9f0e19b2a033",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update multiple properties > no locked > counterparty accepts manually > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:dab8bf0d-e0d7-493c-8680-13c64847a876|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "amount": "-459.5300",
        "currencyCode": "PLN",
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
        "note": "necessitatibus voluptatem nemo",
        "receiptId": "b9f660e6-c1bc-45dd-a44f-3d97cdd5e2f5",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update multiple properties > no locked > counterparty accepts manually > unlocked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:0cc3460c-e06f-41e1-9274-3c44d81defa6|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "amount": "-288.7400",
        "currencyCode": "MGA",
        "note": "dolorum provident deleniti",
        "receiptId": "697ea37b-9f1b-40f4-9661-9f0e19b2a033",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update multiple properties > no locked > counterparty auto-accepts > debt didn't exist beforehand 1`] = `
{
  "added": {
    "debts": {
      "id:ac5dc383-b972-4f25-92d5-cfd8bb6ea75a|ownerAccountId:b5f98bfa-72f8-4789-ab64-3c4038d9536b": {
        "amount": "-620.0900",
        "created": "2020-01-01T00:00:00.000Z",
        "currencyCode": "IRR",
        "id": "ac5dc383-b972-4f25-92d5-cfd8bb6ea75a",
        "lockedTimestamp": null,
        "note": "quae ipsa quo",
        "ownerAccountId": "b5f98bfa-72f8-4789-ab64-3c4038d9536b",
        "receiptId": "5697f64e-794a-4534-874c-283e2334b4c9",
        "timestamp": "2020-06-01T00:00:00.000Z",
        "userId": "1d208f1a-a330-418a-943e-539bca90dae0",
      },
    },
  },
  "updated": {
    "debts": {
      "id:ac5dc383-b972-4f25-92d5-cfd8bb6ea75a|ownerAccountId:a70c3c7d-6c9a-4189-b65e-84061c3d1a7a": {
        "amount": "620.0900",
        "currencyCode": "IRR",
        "note": "quae ipsa quo",
        "receiptId": "5697f64e-794a-4534-874c-283e2334b4c9",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update multiple properties > no locked > counterparty auto-accepts > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:dab8bf0d-e0d7-493c-8680-13c64847a876|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "amount": "-459.5300",
        "currencyCode": "PLN",
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
        "note": "necessitatibus voluptatem nemo",
        "receiptId": "b9f660e6-c1bc-45dd-a44f-3d97cdd5e2f5",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
      "id:dab8bf0d-e0d7-493c-8680-13c64847a876|ownerAccountId:b4fba71b-3720-46f4-befe-54e779c889fc": {
        "amount": "459.5300",
        "currencyCode": "PLN",
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
        "receiptId": "b9f660e6-c1bc-45dd-a44f-3d97cdd5e2f5",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update multiple properties > no locked > counterparty auto-accepts > unlocked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:0cc3460c-e06f-41e1-9274-3c44d81defa6|ownerAccountId:32bcb6f1-76a9-4892-a8c2-9e755afa6fe7": {
        "amount": "288.7400",
        "currencyCode": "MGA",
        "receiptId": "697ea37b-9f1b-40f4-9661-9f0e19b2a033",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
      "id:0cc3460c-e06f-41e1-9274-3c44d81defa6|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "amount": "-288.7400",
        "currencyCode": "MGA",
        "note": "dolorum provident deleniti",
        "receiptId": "697ea37b-9f1b-40f4-9661-9f0e19b2a033",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update note > counterparty accepts manually > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:dab8bf0d-e0d7-493c-8680-13c64847a876|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "note": "aperiam facilis cum",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update note > counterparty accepts manually > unlocked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:0cc3460c-e06f-41e1-9274-3c44d81defa6|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "note": "eaque aliquid molestiae",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update note > counterparty auto-accepts > debt didn't exist beforehand 1`] = `
{
  "added": {
    "debts": {
      "id:ac5dc383-b972-4f25-92d5-cfd8bb6ea75a|ownerAccountId:b5f98bfa-72f8-4789-ab64-3c4038d9536b": {
        "amount": "-523.1100",
        "created": "2020-01-01T00:00:00.000Z",
        "currencyCode": "XPF",
        "id": "ac5dc383-b972-4f25-92d5-cfd8bb6ea75a",
        "lockedTimestamp": null,
        "note": "ipsam possimus similique",
        "ownerAccountId": "b5f98bfa-72f8-4789-ab64-3c4038d9536b",
        "receiptId": null,
        "timestamp": "2020-01-01T00:00:00.000Z",
        "userId": "1d208f1a-a330-418a-943e-539bca90dae0",
      },
    },
  },
  "updated": {
    "debts": {
      "id:ac5dc383-b972-4f25-92d5-cfd8bb6ea75a|ownerAccountId:a70c3c7d-6c9a-4189-b65e-84061c3d1a7a": {
        "note": "ipsam possimus similique",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update note > counterparty auto-accepts > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:dab8bf0d-e0d7-493c-8680-13c64847a876|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "note": "aperiam facilis cum",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update note > counterparty auto-accepts > unlocked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:0cc3460c-e06f-41e1-9274-3c44d81defa6|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "note": "eaque aliquid molestiae",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update receipt id > counterparty accepts manually > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:dab8bf0d-e0d7-493c-8680-13c64847a876|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "receiptId": "b9f660e6-c1bc-45dd-a44f-3d97cdd5e2f5",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update receipt id > counterparty accepts manually > unlocked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:0cc3460c-e06f-41e1-9274-3c44d81defa6|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "receiptId": "697ea37b-9f1b-40f4-9661-9f0e19b2a033",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update receipt id > counterparty auto-accepts > debt didn't exist beforehand 1`] = `
{
  "added": {
    "debts": {
      "id:ac5dc383-b972-4f25-92d5-cfd8bb6ea75a|ownerAccountId:b5f98bfa-72f8-4789-ab64-3c4038d9536b": {
        "amount": "-523.1100",
        "created": "2020-01-01T00:00:00.000Z",
        "currencyCode": "XPF",
        "id": "ac5dc383-b972-4f25-92d5-cfd8bb6ea75a",
        "lockedTimestamp": null,
        "note": "Qui distinctio consequatur id delectus harum consequatur voluptatem id.",
        "ownerAccountId": "b5f98bfa-72f8-4789-ab64-3c4038d9536b",
        "receiptId": "5697f64e-794a-4534-874c-283e2334b4c9",
        "timestamp": "2020-01-01T00:00:00.000Z",
        "userId": "1d208f1a-a330-418a-943e-539bca90dae0",
      },
    },
  },
  "updated": {
    "debts": {
      "id:ac5dc383-b972-4f25-92d5-cfd8bb6ea75a|ownerAccountId:a70c3c7d-6c9a-4189-b65e-84061c3d1a7a": {
        "receiptId": "5697f64e-794a-4534-874c-283e2334b4c9",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update receipt id > counterparty auto-accepts > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:dab8bf0d-e0d7-493c-8680-13c64847a876|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "receiptId": "b9f660e6-c1bc-45dd-a44f-3d97cdd5e2f5",
      },
      "id:dab8bf0d-e0d7-493c-8680-13c64847a876|ownerAccountId:b4fba71b-3720-46f4-befe-54e779c889fc": {
        "receiptId": "b9f660e6-c1bc-45dd-a44f-3d97cdd5e2f5",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update receipt id > counterparty auto-accepts > unlocked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:0cc3460c-e06f-41e1-9274-3c44d81defa6|ownerAccountId:32bcb6f1-76a9-4892-a8c2-9e755afa6fe7": {
        "receiptId": "697ea37b-9f1b-40f4-9661-9f0e19b2a033",
      },
      "id:0cc3460c-e06f-41e1-9274-3c44d81defa6|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "receiptId": "697ea37b-9f1b-40f4-9661-9f0e19b2a033",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update timestamp > counterparty accepts manually > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:dab8bf0d-e0d7-493c-8680-13c64847a876|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update timestamp > counterparty accepts manually > unlocked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:0cc3460c-e06f-41e1-9274-3c44d81defa6|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update timestamp > counterparty auto-accepts > debt didn't exist beforehand 1`] = `
{
  "added": {
    "debts": {
      "id:ac5dc383-b972-4f25-92d5-cfd8bb6ea75a|ownerAccountId:b5f98bfa-72f8-4789-ab64-3c4038d9536b": {
        "amount": "-523.1100",
        "created": "2020-01-01T00:00:00.000Z",
        "currencyCode": "XPF",
        "id": "ac5dc383-b972-4f25-92d5-cfd8bb6ea75a",
        "lockedTimestamp": null,
        "note": "Qui distinctio consequatur id delectus harum consequatur voluptatem id.",
        "ownerAccountId": "b5f98bfa-72f8-4789-ab64-3c4038d9536b",
        "receiptId": null,
        "timestamp": "2020-06-01T00:00:00.000Z",
        "userId": "1d208f1a-a330-418a-943e-539bca90dae0",
      },
    },
  },
  "updated": {
    "debts": {
      "id:ac5dc383-b972-4f25-92d5-cfd8bb6ea75a|ownerAccountId:a70c3c7d-6c9a-4189-b65e-84061c3d1a7a": {
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update timestamp > counterparty auto-accepts > locked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:dab8bf0d-e0d7-493c-8680-13c64847a876|ownerAccountId:16881856-073a-4f5f-84e4-969b374cba81": {
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
      "id:dab8bf0d-e0d7-493c-8680-13c64847a876|ownerAccountId:b4fba71b-3720-46f4-befe-54e779c889fc": {
        "lockedTimestamp": "2020-01-01T00:00:00.000Z",
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`debts.update > functionality > update timestamp > counterparty auto-accepts > unlocked before update 1`] = `
{
  "updated": {
    "debts": {
      "id:0cc3460c-e06f-41e1-9274-3c44d81defa6|ownerAccountId:32bcb6f1-76a9-4892-a8c2-9e755afa6fe7": {
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
      "id:0cc3460c-e06f-41e1-9274-3c44d81defa6|ownerAccountId:d8fbc0b6-dd9d-415a-ad00-7f2fbb3a992b": {
        "timestamp": "2020-06-01T00:00:00.000Z",
      },
    },
  },
}
`;
